--- a/src/DispatchEndpoints/DispatchEndpoints.csproj
+++ b/src/DispatchEndpoints/DispatchEndpoints.csproj
@@ -4,6 +4,9 @@
 	  <TargetFramework>netstandard2.0</TargetFramework>
 	  <LangVersion>latest</LangVersion>
 	  <Nullable>enable</Nullable>
+	  <Description>Easily Create Controllers </Description>
+	  <RepositoryUrl>https://github.com/illunix/DispatchEndpoints</RepositoryUrl>
+	  <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
 	
 	<ItemGroup>
