--- a/src/DispatchEndpoints.Example/DispatchEndpoints.Example.csproj
+++ b/src/DispatchEndpoints.Example/DispatchEndpoints.Example.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DispatchEndpoints\DispatchEndpoints.csproj" />
+    <ProjectReference Include="..\DispatchEndpoints\DispatchEndpoints.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="true" />
   </ItemGroup>
 
 </Project>
