--- a/src/DispatchEndpoints/DispatchEndpoints.csproj
+++ b/src/DispatchEndpoints/DispatchEndpoints.csproj
@@ -4,10 +4,10 @@
 	  <TargetFramework>netstandard2.0</TargetFramework>
 	  <LangVersion>latest</LangVersion>
 	  <Nullable>enable</Nullable>
-	  <Description>Easily Create Controllers</Description>
+	  <Description>Make Building Api's Easier</Description>
 	  <RepositoryUrl>https://github.com/illunix/DispatchEndpoints</RepositoryUrl>
 	  <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-	  <Version>1.0.3</Version>
+	  <Version>1.0.4</Version>
   </PropertyGroup>
 	
 	<ItemGroup>
